fix: replace z-indexes with lower values

--- a/source/components/header/style.scss
+++ b/source/components/header/style.scss
@@ -14,7 +14,6 @@ $_: "c-header";
 
 /* Component */
 .#{$_} {
-    z-index: 6000;
     position: relative;
     background-color: tokens.get($_, "background-color");
     color: tokens.get($_, "color");
@@ -27,7 +26,7 @@ $_: "c-header";
     &.#{$_}--sticky {
         position: sticky;
         top: 0;
-        z-index: 7000;
+        z-index: 1;
     }
 
     &.#{$_}--primary {
