--- a/source/components/segment/style.scss
+++ b/source/components/segment/style.scss
@@ -18,6 +18,7 @@ $_observe-breakpoint-md: 768px;
     display: flex;
     flex-wrap: wrap;
     position: relative;
+    contain: layout;
     container-name: segment;
     container-type: inline-size;
 
@@ -86,7 +87,7 @@ $_observe-breakpoint-md: 768px;
         position: absolute;
         right: tokens.use($c, "base", 1);
         top: tokens.use($c, "base", 1);
-        z-index: 3000;
+        z-index: 1;
         cursor: pointer;
     }
 
